src/examples/errors/assign_prev_decl.del
def main() -> nil {

    int a = 2;

    real a = 2.33;

    return;
}